--- a/vagrant/dockerfiles/elasticsearch_with_ik/elasticsearch.yml
+++ b/vagrant/dockerfiles/elasticsearch_with_ik/elasticsearch.yml
@@ -373,6 +373,11 @@ index:
       pinyin_first_letter:
         type: pinyin
         first_letter: only
+    filter:
+      pinyin_first_letter:
+        type: pinyin
+        first_letter: only
+    analyzer:
       ik:
         alias:
         - ik_analyzer
@@ -401,3 +406,4 @@ index:
         tokenizer: keyword
         filter:
         - pinyin_first_letter
+  index.analysis.analyzer.default.type: ik
