--- a/vagrant/dockerfiles/elasticsearch_with_ik/elasticsearch.yml
+++ b/vagrant/dockerfiles/elasticsearch_with_ik/elasticsearch.yml
@@ -385,6 +385,6 @@ index:
     tokenizer:
       xq_pinyin:
         type: pinyin
-        first_letter: "prefix"
-        padding_char: ""
+        first_letter: "none"
+        padding_char: " "
   index.analysis.analyzer.default.type: ik
